<resources>
    <string name="app_name">SegundaDAM</string>
    <string name="title_activity_primera_actividad">AppAndroid</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_suma">Suma</string>

    <string name="tvOp1">Sumando:</string>
    <string name="tvOp2">Introduce el sumando</string>
    <string name="btOperar">Operar</string>
    <string name="tvResultado">Resultado:</string>
    <string name="title_activity_sumas">Sumas</string>
    <string name="result"></string>

    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multi">Multiplicar</string>
    <string name="div">Dividir</string>

</resources>
