<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dam.segundadam.Sumas">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvOp1"
        android:id="@+id/tvOp1"
        android:layout_alignBaseline="@+id/etOp1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etOp1"
        android:hint="@string/tvOp2"
        android:layout_toRightOf="@id/tvOp1"
        android:layout_toEndOf="@id/tvOp1"
        android:layout_gravity="center"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvOp1"
        android:id="@+id/tvOp2"
        android:layout_below="@id/etOp1"
        android:layout_alignBaseline="@+id/etOp2" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etOp2"
        android:hint="@string/tvOp2"
        android:layout_below="@id/etOp1"
        android:layout_toRightOf="@id/tvOp2"
        android:layout_toEndOf="@id/tvOp2"
        android:inputType="number"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btOperar"
        android:id="@+id/btOperar"
        android:layout_below="@+id/rgGrupo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvResultado"
        android:id="@+id/tvResultado"
        android:layout_below="@id/btOperar" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text=""
        android:ems="10"
        android:id="@+id/etResultado"
        android:layout_below="@id/tvResultado"/>



    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etOp2"
        android:id="@+id/rgGrupo"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sumar"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/rbSumar" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restar"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/rbRestar" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multi"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/rbMulti" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/rbDiv" />
    </RadioGroup>

</RelativeLayout>
